2022-01-12  Charlie Zender  <zender@uci.edu>

	* NCO 5.0.5 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.0.5: Peacock';git push
	git tag -a 5.0.5 -m 'all: btr,bgr_btr,gbg=gbr; ncatted: fix modify mode when fll_val dne, prepend mode; ncclimo mpas inp_aut/std/psn, ppn_opt';git push --tags

	* ncremap change E3SMU_ROOT from 1.5.0 to 1.6.0

2022-01-11  Charlie Zender  <zender@uci.edu>

	* NCO 5.0.5-beta03 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.0.5-beta03: Bulleit';git push
	git tag -a 5.0.5-beta03 -m 'all: btr,bgr_btr,gbg=gbr; ncatted: fix modify mode when fll_val dne, prepend mode; ncclimo mpas inp_aut/std/psn, ppn_opt';git push --tags

	* ncclimo simplify and invoke ppn_opt block for all file input modes

2022-01-09  Charlie Zender  <zender@uci.edu>

	* NCO 5.0.5-beta02 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.0.5-beta02: Yellowstone';git push
	git tag -a 5.0.5-beta02 -m 'all: btr,bgr_btr,gbg=gbr; ncatted: fix modify mode when fll_val dne, prepend mode; ncclimo mpas inp_aut/std/psn, ppn_opt';git push --tags

	* nco.texi: Document prepend mode

2022-01-07  Charlie Zender  <zender@uci.edu>

	* ncatted: Add prepend mode

	* ncatted: Prevent modify mode netCDF4 _FillValue from trying to rename non-existing attribute

2022-01-04  Charlie Zender  <zender@uci.edu>

	* NCO 5.0.5-beta01 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.0.5-beta01: Paddle to Beachcombers';git push
	git tag -a 5.0.5-beta01 -m 'btr, bgr_btr, gbg=gbr, ncclimo mpas inp_aut/std/psn, ppn_opt';git push --tags

	* Change external name of Granular BitGroom (GBG) to Granular BitRound (GBR).

	* nco_flt.h remove type qualifiers on return types to fix Intel	compiler warnings

2022-01-01  Charlie Zender  <zender@uci.edu>

	* nco.texi document BitRound/HalfShave changes

	* nco.texi clarify NaNf documentation

2021-12-31  Charlie Zender  <zender@uci.edu>

	* NCO 5.0.5-alpha01 release procedure: