@@ -1,1 +1,1 @@
-5.0.5-beta03
+5.0.5
