@@ -152,7 +152,7 @@ and
 
 <ul>
 <li>2022 Feb&nbsp;XX: 5.0.5 <i>In Progress...</i>
-<li>2022 Jan&nbsp;07: 5.0.5 BitRound
+<li>2022 Jan&nbsp;24: 5.0.5 BitRound
 <li>2021 Dec&nbsp;04: 5.0.4 Splitter API revamp
 <li>2021 Oct&nbsp;06: 5.0.3 Granular BitGroom
 <li>2021 Sep&nbsp;24: 5.0.2 MOAB/mbtempest
