@@ -1,8 +1,8 @@
 nco (5.0.5-1) unstable; urgency=low
 
-  * new upstream version fxm:
+  * new upstream version Heather: all: btr,bgr_btr,gbg=gbr; ncatted: fix modify mode when fll_val dne, prepend mode; ncclimo mpas inp_aut/std/psn, ppn_opt
 
- -- Charlie Zender <zender@uci.edu>  Fri, 07 Jan 2022 12:25:53 -0700
+ -- Charlie Zender <zender@uci.edu>  Mon, 24 Jan 2022 12:25:53 -0700
 
 nco (5.0.4-1) unstable; urgency=low
 
