@@ -1,8 +1,12 @@
-2022-01-12  Charlie Zender  <zender@uci.edu>
+2022-01-24  Charlie Zender  <zender@uci.edu>
 
 	* NCO 5.0.5 release procedure:
-	cd ~/nco;git commit -a -m 'Version 5.0.5: Peacock';git push
+	cd ~/nco;git commit -a -m 'Version 5.0.5: Heather';git push
 	git tag -a 5.0.5 -m 'all: btr,bgr_btr,gbg=gbr; ncatted: fix modify mode when fll_val dne, prepend mode; ncclimo mpas inp_aut/std/psn, ppn_opt';git push --tags
+
+	* Unsuccessfully searched for bug triggered by Spack NCO on Chrysalis compute nodes
+
+2022-01-12  Charlie Zender  <zender@uci.edu>
 
 	* ncremap change E3SMU_ROOT from 1.5.0 to 1.6.0
 
